fix intermediate spacing

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -83,7 +83,7 @@ ul {
 	list-style-type: none;
 }
 ol {
-  margin: 0 0 0 20px;
+  margin: 10px 0 10px 20px;
 }
 
 /*---------------------------------------------*/
